--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-table": "^7.7.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
